<resources>
    <string name="app_name">YouTrack</string>
    <string name="network_port">Сетевой порт</string>
    <string name="server_address">Адрес сервера</string>
    <string name="begin_transmission">Начать передачу</string>
    <string name="stop_service">Остановить</string>
    <string name="start_service">Запустить</string>
    <string name="gps">GPS</string>
    <string name="network">Network</string>
    <string name="json">json</string>
    <string name="protobuf">protobuf</string>
    <string name="exit">Выйти</string>
    <string name="attention">Внимание</string>
    <string name="yes">Да</string>
    <string name="request_permission_message">Для работы приложения требуется доступ к %s. Предоставить разрешение?</string>
    <string name="location_service">службе точного местоположения</string>
    <string name="set_server_and_port">Задайте адрес и порт сервера</string>
    <string name="no_location_permission">Нет доступа к службе точного местоположения. Не возможно запустить службу!</string>
</resources>
