<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_address">

            <EditText
                android:id="@+id/serverName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textShortMessage" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/network_port">

            <EditText
                android:id="@+id/serverPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Интервал отправки">

            <EditText
                android:id="@+id/sendInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Интервал обновления">

            <EditText
                android:id="@+id/updateInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/gps_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gps"
            android:padding="8dp" />

        <CheckBox
            android:id="@+id/network_provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network"
            android:padding="8dp" />

        <RadioGroup
            android:id="@+id/output_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <RadioButton
                android:id="@+id/output_type_protobuf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protobuf" />

            <RadioButton
                android:id="@+id/output_type_json"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/json" />
        </RadioGroup>

        <ToggleButton
            android:id="@+id/launch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLaunchClicked"
            android:textOff="@string/start_service"
            android:textOn="@string/stop_service" />
    </LinearLayout>
</ScrollView>